--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,7 @@ Flask==2.3.3
 Flask-CORS==4.0.0
 Flask-JWT-Extended==4.6.0
 requests==2.31.0
+SQLAlchemy==2.0.36
+Flask-SQLAlchemy==3.1.1
+PyMySQL==1.1.1
+python-dotenv==1.0.1
