--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,7 @@ DB_SSL_CA=backend/certs/aiven-ca.pem
 # Convenience DSN for SQLAlchemy (PyMySQL driver)
 # Note: CA is typically provided via connect_args, not the URL.
 DATABASE_URL=mysql+pymysql://crswd:your-password-here@mysql-xxxxxx-xxxxxx.h.aivencloud.com:21404/crswd
+ 
+# Forgot password flow
+FRONTEND_BASE_URL=http://localhost:8080
+RESET_TOKEN_MINUTES=15
