Auth: send reset emails via SMTP when configured; always log reset link for dev; document SMTP env; update FRONTEND_BASE_URL guidance

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,3 +22,14 @@ DATABASE_URL=mysql+pymysql://crswd:your-password-here@mysql-xxxxxx-xxxxxx.h.aive
 # Forgot password flow
 FRONTEND_BASE_URL=http://localhost:8080
 RESET_TOKEN_MINUTES=15
+
+# Optional SMTP for sending reset emails
+# For dev, services like Mailtrap work well
+# SMTP_HOST=smtp.mailtrap.io
+# SMTP_PORT=587
+# SMTP_USER=your-smtp-username
+# SMTP_PASSWORD=your-smtp-password
+# SMTP_FROM=no-reply@your-domain.com
+# SMTP_USE_TLS=true
+# SMTP_USE_SSL=false
+# APP_NAME=CrossyThink
