--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,16 +20,17 @@ DB_SSL_CA=backend/certs/aiven-ca.pem
 DATABASE_URL=mysql+pymysql://crswd:your-password-here@mysql-xxxxxx-xxxxxx.h.aivencloud.com:21404/crswd
  
 # Forgot password flow
-FRONTEND_BASE_URL=http://localhost:8080
+FRONTEND_BASE_URL=http://localhost:5500
 RESET_TOKEN_MINUTES=15
 
 # Optional SMTP for sending reset emails
-# For dev, services like Mailtrap work well
-# SMTP_HOST=smtp.mailtrap.io
+# Using Mailtrap Email Sending (live) with your verified domain
+# Get these from: Email Sending → Sending Domains → Integration
+# SMTP_HOST=live.smtp.mailtrap.io
 # SMTP_PORT=587
-# SMTP_USER=your-smtp-username
-# SMTP_PASSWORD=your-smtp-password
-# SMTP_FROM=no-reply@your-domain.com
+# SMTP_USER=apismtp@mailtrap.io
+# SMTP_PASSWORD=<YOUR_API_TOKEN>
+# SMTP_FROM=no-reply@newbio.net
 # SMTP_USE_TLS=true
 # SMTP_USE_SSL=false
 # APP_NAME=CrossyThink
