feat: add API usage tracking, admin endpoints, frontend usage display; fix DB config; ignore __pycache__ and backend/instance; cleanup .env

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ backend/.venv/
 backend/certs/*.pem
 !backend/.env.example
 !backend/certs/README.md
+
+# Python cache directories
+__pycache__/
+backend/instance/
