add gemini as the llm

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,3 +34,9 @@ RESET_TOKEN_MINUTES=15
 # SMTP_USE_TLS=true
 # SMTP_USE_SSL=false
 # APP_NAME=CrossyThink
+
+# Google Gemini API (for crossword word generation)
+# Get an API key from Google AI Studio and keep it secret.
+GEMINI_API_KEY=your-gemini-api-key
+# Optional overrides:
+# GEMINI_MODEL=gemini-2.5-flash
